Bug 432044 - "Update" page displays a weird tooltip while Discover fetches updates
Summary: "Update" page displays a weird tooltip while Discover fetches updates
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.20.90
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: regression
: 434351 435331 436996 438452 441872 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-24 16:58 UTC by Patrick Silva
Modified: 2021-09-02 17:48 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
screen recording (1.17 MB, video/webm)
2021-01-24 16:59 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-01-24 16:58:59 UTC
SUMMARY
This behavior occurs on both Arch (Plasma 5.21 beta) and neon unstable.

STEPS TO REPRODUCE
1. click on update notifier icon in system tray when updates are available
2. 
3. 

OBSERVED RESULT
Watch the attached screen recording please.

EXPECTED RESULT
no weird popup while Discover fetches updates

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.90
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Comment 1 Patrick Silva 2021-01-24 16:59:25 UTC
Created attachment 135133 [details]
screen recording
Comment 2 Nate Graham 2021-01-26 05:38:07 UTC
Hah yeah this thing. It's a tooltip. It's supposed to only be visible when you hover the cursor over the text below the progress bar. I've seen it pop up at odd times too. Will investigate.
Comment 3 Bug Janitor Service 2021-02-05 00:54:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/65
Comment 4 Nate Graham 2021-03-16 03:16:57 UTC
*** Bug 434351 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2021-04-06 00:15:04 UTC
*** Bug 435331 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2021-04-07 20:58:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/105
Comment 7 Aleix Pol 2021-04-08 22:55:02 UTC
Git commit 9ce5d98dfa8e8b315b029d5f94af151bc055fb73 by Aleix Pol Gonzalez, on behalf of Nate Graham.
Committed on 08/04/2021 at 22:33.
Pushed by ngraham into branch 'master'.

Remove non-useful tooltip while loading updates

This tooltip was added to help diagnose issues with stuck backends, but
has proven troublesome. This commit removes it for the following
reasons:

1. It did not succeed in fixing the problem in the first place because
   the root cause always seems to be the PackageKit backend being stuck
   for a moment and not issuing updates, so the tooltip doesn't change at
   all or even tell us which backend is stuck.
2. Due to a bug, the tooltip was always shown when the cursor was
   hovered anywhere over the main panel, so users saw it much more than
   we wanted and filed many bug reports.

This commit partially reverts 2196ed495089662f72107569e2aba451c8541cf5.
FIXED-IN: 5.21.5

M  +0    -15   discover/qml/UpdatesPage.qml
M  +0    -7    libdiscover/resources/ResourcesModel.cpp
M  +0    -2    libdiscover/resources/ResourcesModel.h

https://invent.kde.org/plasma/discover/commit/9ce5d98dfa8e8b315b029d5f94af151bc055fb73
Comment 8 Nate Graham 2021-05-13 15:37:32 UTC
*** Bug 436996 has been marked as a duplicate of this bug. ***
Comment 9 Patrick Silva 2021-06-11 20:17:30 UTC
*** Bug 438452 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-09-02 17:48:39 UTC
*** Bug 441872 has been marked as a duplicate of this bug. ***