Move the refreshing progress information from a tooltip to the progress view

Hopefully it will look a bit more natural.

BUG: 432044