discover/qml/UpdatesPage.qml
@@ -12,7 +12,6 @@ DiscoverPage
     title: i18n("Updates")
 
     property string footerLabel: ""
-    property string footerToolTip: ""
     property int footerProgress: 0
     property bool isBusy: false
 
@@ -183,9 +182,6 @@ DiscoverPage
             Layout.alignment: Qt.AlignHCenter
             horizontalAlignment: Text.AlignHCenter
             text: page.footerLabel
-            ToolTip.text: page.footerToolTip
-            ToolTip.visible: hovered && page.footerToolTip.length > 0
-            ToolTip.delay: Kirigami.Units.toolTipDelay
             level: 2
         }
         Button {
@@ -349,17 +345,6 @@ DiscoverPage
             PropertyChanges { target: page; footerLabel: i18nc("@info", "Fetching updates...") }
             PropertyChanges { target: statusLabel; opacity: 1 }
             PropertyChanges { target: page; footerProgress: ResourcesModel.fetchingUpdatesProgress }
-            PropertyChanges { target: page; footerToolTip: {
-                    var ret = "";
-                    for (var i in ResourcesModel.backends) {
-                        var backend = ResourcesModel.backends[i]
-                        if (!backend.isFetching)
-                            continue
-                        ret += i18n("%1 (%2%)\n", backend.name, backend.fetchingUpdatesProgress)
-                    }
-                    return ret
-                }
-            }
             PropertyChanges { target: page; isBusy: true }
             PropertyChanges { target: updatesView; opacity: 0 }
         },
